--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss-nested": "^5.0.1",
     "postcss-simple-vars": "^6.0.1",
     "prismjs": "^1.22.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
