--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-remark-responsive-iframe": "^2.4.16",
     "gatsby-remark-smartypants": "^2.3.12",
     "gatsby-source-filesystem": "^2.3.32",
+    "gatsby-transformer-json": "^2.4.15",
     "gatsby-transformer-remark": "^2.8.37",
     "gatsby-transformer-sharp": "^2.5.16",
     "postcss": "^8.1.4",
