--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-postcss": "^3.0.3",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.38",
+    "gatsby-plugin-webfonts": "^1.1.3",
     "gatsby-remark-copy-linked-files": "^2.6.0",
     "gatsby-remark-images": "^3.3.32",
     "gatsby-remark-prismjs": "^3.5.15",
