--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "babel-plugin-prismjs": "^2.0.1",
     "gatsby": "^2.24.85",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-feed": "^2.5.13",
@@ -17,7 +18,7 @@
     "gatsby-plugin-postcss": "^3.0.3",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-plugin-webfonts": "^1.1.3",
+    "gatsby-plugin-webfonts": "^1.1.4",
     "gatsby-remark-copy-linked-files": "^2.6.0",
     "gatsby-remark-images": "^3.3.32",
     "gatsby-remark-prismjs": "^3.5.15",
